

2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6 and 1.7, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

08-Nov-2011 Jean-Marie Simonet
 # [#26980] Missing menu ordering in edit. Thanks Christophe.
 
07-Nov-2011 Jean-Marie Simonet
 #$ [#27007] *mod_articles_category missing option to sort by feature articles ordering system. Thanks Denise.
 $ [#24697] Tooltip partly matches the related options in Latest News module

07-Nov-2011 Christophe Demko
 + [#26940] Allow ability to upload file (eg: profile picture) through com_users profile (CY Lee)

07-Nov-2011 Mark Dexter
 # [#26927] upgrade from 1.6.3 and 1.6.4 to 1.7.2
 # [#27090] Use elseif instead of else if (for platform files)
 # [#26226] page break broke when 'Table of Contents' set to Hide
 # [#27115] Use lowercase token

06-Nov-2011 Jean-Marie Simonet
 # [#26840] manifest_cache entry not generated for file packages on install. Thanks Michael
 # [#27108] *Fatal Error in multilangstatus module when languagefilter plugin disabled
 # [#26883] Start syncing to platform version 11.3 (media/system $id part)

04-Nov-2011 Jean-Marie Simonet
 # [#27075] Make sure there is a blank line at the end of every PHP file. Thanks Rouven
 
04-Nov-2011 Christophe Demko
 # [#27038] Apply the patch to fix the MySQL specific queries - com_installer (Sudhi Seshachala)

02-Nov-2011 Christophe Demko
 # [#27023] Component updates not working in Joomla! 1.7.0 and later (Nicholas Dionysopoulos)
 - Remove module menu entry (missing in [#27072])
 - [#27072] Books module when installing without sample data (Rune Sjøen)

01-Nov-2011 Jean-Marie Simonet
 # [#26608] Save as copy template style. Thanks Christophe
 # [#26959] Can't mass mail to SA group. Thanks Christophe