@@ -14,3 +14,5 @@ PLG_SYSTEM_LANGUAGEFILTER_BROWSER_SETTINGS="Browser Settings"
 PLG_SYSTEM_LANGUAGEFILTER_SITE_LANGUAGE="Site Language"
 PLG_SYSTEM_LANGUAGEFILTER_FIELD_MENU_ASSOCIATIONS_DESC="This option will allow menu associations when switching from one language to another"
 PLG_SYSTEM_LANGUAGEFILTER_FIELD_MENU_ASSOCIATIONS_LABEL="Menu associations"
+PLG_SYSTEM_LANGUAGEFILTER_FIELD_REMOVE_DEFAULT_PREFIX_DESC="Remove the defined prefix for the default site language when Search Engine Friendly URLs is set to 'Yes'."
+PLG_SYSTEM_LANGUAGEFILTER_FIELD_REMOVE_DEFAULT_PREFIX_LABEL="Remove default language prefix"
